Fixed sticky issue on safari by reverting position

--- a/theme/theme.less
+++ b/theme/theme.less
@@ -131,7 +131,7 @@ h4 {
 .nav-container {
   width: 100%;
   background: @background-black;
-  position: sticky;
+  position: fixed;
   display: flex;
   justify-content: center;
   top: 0;
